# hash-based-pcd

./: .gitignore  .temp  README.md  didactic_arc.py  mimc_r1cs.json  mimc_r1cs_2.json  mimc_r1cs_low_norm.json  mimc_r1cs_transformed.json  pyproject.toml
arc/: __main__.py  combine.py  r1cs_to_racc.py  rational_constraint.py  rs_accumulation.py
mimc/: __init__.py  __main__.py  low_norm_example.txt  mimc_constants_generation.py  mimc_prime_field.ipynb  mimc_prime_field.py  r1cs_low_norm.py  round_constants.py
neo/: cyclotomic_poly.ipynb  cyclotomic_poly.py  lattice_estimator.ipynb  neo.ipynb  neo_parameters.ipynb  neo_parameters.py  performance_test.ipynb  sumcheck.ipynb
ntt/: __main__.py  ntt_testcases.py
stir/: __main__.py  bivariate.py  constants.py  didactic_stir.py  domain.py  fiat_schamir.py  fiat_shamir.py  folding.py  interpolation.py  merkle.py  pow.py  prover.py  quotient.py  stir_main.py  stir_parameters.py  utils.py  verifier.py
stir/test/: flint_ntt.py  merkle_tree.pkl  multiply_512bit.c  proof.pkl  sage_ntt.ipynb  small_vandermonde.py
stir/test/original-stir-traces/: domain_points.json  evals.json  folded_evals.json  folding_randomness.json  fs1.json  fs_bits.json  g_domain_r0.json  g_evaluations_r0.json  g_folded_evaluations_r0.json  g_merkle_r0.json  g_poly_r0.json  merkle_tree.json  poly_coeffs.json
