[project]
name = "thesis-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.4",
    "galois>=0.4.4",
    "python-flint>=0.7.1",
    "sympy>=1.13.3",
]

[tool.setuptools.packages.find]
where = ["arc", "mimc", "stir", "warp"]
